--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -8,11 +8,13 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <a href="#" class="logo">
-          <img src="img/logo.png" alt="Barbershop" width="111" height="24">
-        </a>
         <nav class="main-navigation">
           <ul>
+            <li>
+              <a href="#" class="logo">
+                <img src="img/logo.png" alt="Barbershop" width="111" height="24">
+              </a>
+            </li>
             <li>
               <a href="#">Информация</a>
             </li>
@@ -36,26 +38,24 @@
       </div>
     </header>
     <main class="container">
-      <h1>Набор для путешествий &laquo;BAXTER OF CALIFORNIA&raquo;</h1>
-      <div class="breadcrumbs">
-        <ul>
-          <li>
-            <a href="#">Главная</a>
-          </li>
-          <li>
-            <a href="#">Магазин</a>
-          </li>
-          <li>
-            <a href="#">Средства для ухода</a>
-          </li>
-          <li>
-            Набор для путешествий &laquo;BAXTER OF CALIFORNIA&raquo;
-          </li>
-        </ul>
-      </div>
-      <div class="content">
+      <h1 class="main-title">Набор для путешествий &laquo;BAXTER OF CALIFORNIA&raquo;</h1>
+      <ul class="breadcrumbs clearfix">
+        <li>
+          <a href="#">Главная</a>
+        </li>
+        <li>
+          <a href="#">Магазин</a>
+        </li>
+        <li>
+          <a href="#">Средства для ухода</a>
+        </li>
+        <li>
+          Набор для путешествий &laquo;BAXTER OF CALIFORNIA&raquo;
+        </li>
+      </ul>
+      <div class="content clearfix">
         <div class="photos">
-          <img src="img/photo-big.jpg" alt="Большое фото" width="486" height="524" class="photo">
+          <img src="img/photo-big.jpg" alt="Большое фото" width="460" height="498" class="photo">
           <div class="phptos-mini">
             <img src="img/photo-mini-1.jpg" alt="Фото 1" width="140" height="149" class="photo mini">
             <img src="img/photo-mini-2.jpg" alt="Фото 2" width="140" height="149" class="photo mini">
@@ -63,7 +63,7 @@
           </div>
         </div>
         <div class="description">
-          <div class="availability">
+          <div class="availability clearfix">
             <p class="left">Есть в наличии</p>
             <p class="right">Артикул: DEXTER-AE</p>
           </div>
@@ -74,23 +74,25 @@
             для умывания, увлажняющий крем, крем для бритья, крем после бритья,
             шампунь. Набор также может стать отличным подарком.
           </p>
-          <div class="buy">
+          <div class="buy clearfix">
             <div class="price">2 900 руб.</div>
             <a href="#" class="btn">Купить</a>
           </div>
-          <h2>В набор входят:</h2>
-          <ul class="set">
-            <li>Средство для умывания (50 мл)</li>
-            <li>Увлажняющий крем (50 мл)</li>
-            <li>Крем для бритья (50 мл)</li>
-            <li>Крем после бритья (50 мл)</li>
-            <li>Удобная кожаная косметичка</li>
-          </ul>
+          <div class="composition">
+            <h2 class="mini-title">В набор входят:</h2>
+            <ul class="set">
+              <li>Средство для умывания (50 мл)</li>
+              <li>Увлажняющий крем (50 мл)</li>
+              <li>Крем для бритья (50 мл)</li>
+              <li>Крем после бритья (50 мл)</li>
+              <li>Удобная кожаная косметичка</li>
+            </ul>
+          </div>
         </div>
       </div>
     </main>
     <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
