--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             пн — пт: с 10:00 до 22:00<br>
             сб — вс: с 10:00 до 19:00
           </p>
-          <a class="btn" href="#">Как проехать</a>
+          <a class="btn js-open-map" href="#">Как проехать</a>
           <a class="btn" href="#">Обратная связь</a>
         </div>
         <div class="index-content-right">
@@ -127,5 +127,26 @@
         </section>
       </div>
     </footer>
+    <div class="modal-content">
+      <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+      <h2 class="modal-content-title">Личный кабинет</h2>
+      <p>Введите свой логин и пароль.</p>
+      <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+        <input class="icon-user" type="text" name="login" placeholder="Логин">
+        <input class="icon-password" type="password"  name="password" placeholder="Пароль">
+        <label class="login-checkbox">
+          <input type="checkbox" name="remember">
+          <span class="checkbox-indicator"></span>
+          Запомните меня
+        </label>
+        <a class="restore" href="#">Я забыл пароль!</a>
+        <button class="btn" type="submit">Войти</button>
+      </form>
+    </div>
+    <div class="modal-content-map">
+      <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+      <div id="yandex-map"></div>
+    </div>
+    <script src="js/script.js"></script>
   </body>
 </html>
